# etl_project_02

./: .coverage  .dockerignore  .env  Dockerfile  README.md  airflow.cfg  alembic.ini  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-ci.yml
airflow/dags/: etl_monitoring_locations.py  extract_usgs_monitoring_location.py  usgs_etl_dag.py
config/: config-test.yaml  config.yaml  test_config.yaml
data/: README.md
echo/: pyvenv.cfg
jupyter_notebooks/: api_endpoint_snippets.py  parse_dataset_field_lengths.ipynb  test_data_monitoring_locations.json
migrations/: env.py
outdated/: alembic.ini  base.py  db_config.py  usgs_extractor.py  usgs_validator.py
outdated/migrations/: README
raw_data/: README.md
sql/: schema.sql  unified_for_analysts.sql  unified_for_gis.sql
sql/views/: unified_for_analysts.sql  unified_for_gis.sql
src/: exceptions.py  extract.py
src/archive/: usgs_archiver.py
src/common/: http_client.py
src/etl_monitoring_locations/: extract_usgs_monitoring_location.py  run_monitoring_locations.py  transform_monitoring_locations.py  validate_monitoring_locations.py
src/exports/: usgs_exporter.py
src/extract/: extract_monitoring_locations.py  kwarg_usgs_extractor.py  usgs_extractor.py
src/load/: usgs_loader.py
src/models/: usgs_daily_schema.py  usgs_monitoring_locations_schema.py  usgs_parameter_codes_schema.py
src/models/validators/: schema_registry.py  usgs_daily_validator_schema.py  usgs_monitoring_locations_validator_schema.py  usgs_parameter_codes_validator_schema.py
src/pipelines/: etl_runner.py  run_monitoring_locations.py  usgs_etl_runner.py  usgs_export_runner.py
src/transform/: transform_monitoring_locations.py  usgs_transformer.py
src/usgs_monitoring_locations/: extract_usgs_monitoring_locations.py  load_usgs_monitoring_locations.py  run_usgs_monitoring_locations.py  transform_usgs_monitoring_locations.py
src/utils/: config.py  config_loader.py  config_schema.py  dataframe_utils.py  db_config.py  file_utils.py  logging_config.py  serialization.py
src/validate/: usgs_validator.py
tests/: conftest.py
tests/data/: README.md
tests/data/archived_data/: README.md
tests/integration/: conftest.py  test_usgs_etl_runner_api_mocked.py
tests/unit/: conftest.py  test_usgs_archiver.py  test_usgs_exporter.py  test_usgs_extractor.py  test_usgs_loader.py  test_usgs_transformer.py  usgs_transformer.py
tests/unit/common/: test_http_client.py
tests/unit/utils/: test_config.py  (+5 more)
(+9 files in other folders)
