[project]
name = "etl-pipeline-02"
version = "0.1.0"
description = "ETL pipeline using Airflow"
authors = [
    {name = "Christopher Romanillos", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "psycopg2-binary",
    "pyyaml",
    "python-dotenv"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.12"
pytest-cov = "^4.1"
mypy = "^1.10"
black = "^24.4"
ruff = "^0.4"
ipykernel = "^6.29"
jupyterlab = "^4.2"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
